--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function test2(position) {
     //const url = 'http://cyberjapandata2.gsi.go.jp/general/dem/scripts/getelevation.php?lon=${stringLon}&lat=${stringLat}&outtype=JSON';
 
     //取得した緯度経度をもとにAPIのURLを作成
-    const url = 'http://cyberjapandata2.gsi.go.jp/general/dem/scripts/getelevation.php?lon=' + stringLon + '&lat=' + stringLat + '&outtype=JSON';
+    const url = 'https://cyberjapandata2.gsi.go.jp/general/dem/scripts/getelevation.php?lon=' + stringLon + '&lat=' + stringLat + '&outtype=JSON';
 
     fetch(url).then(function(response) {
       return response.text();
