--- a/index.html
+++ b/index.html
@@ -94,11 +94,10 @@ function test3(){
 </head>
 <body>
 
-<button onclick="test()">標高を取得</button>
-
-
-<iframe id="mapURL" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d25858.3598784291!2d139.46060799999998!3d35.89079040000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1642992384005!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
+<iframe id="mapURL" src="https://maps.gsi.go.jp/?hc=hic#14/35.636197/139.838276/&base=std&ls=std&disp=1&vs=c1j0h0k0l0u0t0z0r0s0m0f1" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<p></p>
+<button onclick="test()">現在地と標高を取得</button>
+<p>会社のネットワークを利用している場合は正確な位置情報が取得できない可能性があります。</p>
 
 </body>
 </html>
