--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function test2(position) {
     geo_text += "取得時刻:" + date.toLocaleString() + "\n";
 
     console.log(geo_text);
-    //alert(geo_text);
+    alert(geo_text);
 
     var lat = position.coords.latitude;
     var lon = position.coords.longitude;
